# Emulators

./: .gitignore
chip_8/src/: main.rs
cpp/chip8_cpu/: CMakeLists.txt  cpu.cpp  cpu.h  cpu.hpp  test.cpp
rust/chip_8/src/: chip_8.rs
